@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Fix regression in exporting single tags to iCalendar CATEGORIES (Bug #14699).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1847,7 +1847,7 @@
    <date>2017-09-21</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Fix regression in exporting single tags to iCalendar CATEGORIES (Bug #14699).
    </notes>
   </release>
  </changelog>
